Issue #3083004 by lauriii, fhaeberle, huzooka: Update heading spacings

--- a/css/src/base/elements.css
+++ b/css/src/base/elements.css
@@ -49,38 +49,38 @@ summary {
 h1,
 .heading-a {
   font-weight: bold;
-  margin: 0;
+  margin: var(--space-m) 0 var(--space-s);
   font-size: 1.625em;
   line-height: 1.875em;
 }
 h2,
 .heading-b {
   font-weight: bold;
-  margin: 10px 0;
+  margin: var(--space-m) 0 var(--space-s);
   font-size: 1.385em;
 }
 h3,
 .heading-c {
   font-weight: bold;
-  margin: 10px 0;
+  margin: var(--space-m) 0 var(--space-s);
   font-size: 1.231em;
 }
 h4,
 .heading-d {
   font-weight: bold;
-  margin: 10px 0;
+  margin: var(--space-m) 0 var(--space-s);
   font-size: 1.154em;
 }
 h5,
 .heading-e {
   font-weight: bold;
-  margin: 10px 0;
+  margin: var(--space-m) 0 var(--space-s);
   font-size: 1.077em;
 }
 h6,
 .heading-f {
   font-weight: bold;
-  margin: 10px 0;
+  margin: var(--space-m) 0 var(--space-s);
   font-size: 1.077em;
 }
 p {
